[package]

name = "rh-vcl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ValueSet Compose Language (VCL) is a domain-specific language for expressing ValueSet CLDs in a compact syntax suitable for use within a URL and enabling a new family of implicit ValueSet URIs that are usable across all code systems. The design and development of VCL was inspired by the Expression Constraint Language (ECL) from SNOMED CT."
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["fhir", "valueset", "cql", "healthcare", "hl7"]
categories = ["parser-implementations", "api-bindings"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[dependencies]
rh-foundation = { path = "../rh-foundation", version = "0.1.0-beta.1" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
nom = { workspace = true }

# WASM dependencies - only included when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
rh-foundation = { path = "../rh-foundation", version = "0.1.0-beta.1", features = ["wasm"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

